--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-header></app-header>
+<h3>Testing</h3>
+<router-outlet></router-outlet>
