done with styling

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,4 @@
-<body class="home-page">
-    <div class="header-wrapper header-wrapper-home">
+<div class="header-wrapper header-wrapper-home">
 
         <div class="bg-slider-wrapper">
             <div id="bg-slider" class="flexslider bg-slider">
@@ -14,7 +13,7 @@
         <section id="home-promo" class="home-promo section">
             <div class="container text-center">
                 <h2 class="title">
-                    <span class="upper">TheJerrardGarage</span>
+                    <span class="upper"><img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage" height="60px;"></span>
                     <span class="middle">T-Shirt Printing Singapore</span>
                     <span class="bottom">Customised shirts at cheap price. No minimum order required.</span>
                 </h2>
