--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,15 +3,17 @@
           <div class="row">
             <div class="col-6 offset-3">
               <h1 class="logo text-center">
-                <a href="index.html"><img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage" height="50px;" style="margin-top: 10px;"></a>
+                <a href="index.html"><img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage" height="40px;" style="margin-top: 10px;"></a>
                   <!-- <span class="highlight">The</span>JerrardGarage</a> -->
               </h1><!--//logo-->
             </div>
-            <div class="col-3 text-center" style="padding-top:8px;">
+
+            <div class="col-3 text-center" style="margin-top:8px;">
               <a target="_blank" title="find us on Facebook" href="https://www.facebook.com/tjgsingapore/"><img alt="follow me on facebook" src="https://en.facebookbrand.com/wp-content/uploads/2016/05/flogo_rgb_hex-brc-site-250.png" width="30" border=0 style="margin-right:5px"></a>
 
               <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/tjg.sg"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
-          </div>
+            </div>
+
           <div class="col-12 text-center">
             <nav class="main-nav navbar navbar-expand-md navbar-dark" role="navigation">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,22 +21,22 @@
               </button>
               <div id="navbar-collapse" class="navbar-collapse collapse justify-content-center">
                 <ul class="nav navbar-nav">
-                  <li class="active nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" routerLink="/about">About<i class="fa fa-angle-down"></i></a>
+                  <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink='/home'>Home</a></li>
+                  <li class="nav-item dropdown" routerLinkActive="active">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" routerLink="/about" >About<i class="fa fa-angle-down"></i></a>
                     <div class="dropdown-menu dropdown-menu-right">
-                      <a class="dropdown-item" routerLink="/about">About Us</a>
+                      <a class="dropdown-item" routerLink="/about" routerLinkActive="active">About Us</a>
                       <a class="dropdown-item" href="https://www.facebook.com/tjgsingapore/" target="_blank">Portfolio Gallery</a>
-                      <a class="dropdown-item" routerLink="/blog">Blog (Under Construction)</a>
+                      <a class="dropdown-item" routerLink="/blog" routerLinkActive="active">Blog (Under Construction)</a>
                       <!-- <a class="dropdown-item" routerLink="/blog-post">Single Blog Post</a>
                       <a class="dropdown-item" routerLink="/404">404 Page</a> -->
                     </div>
                   </li><!--//dropdown-->
-                  <li class="nav-item"><a class="nav-link" routerLink="/product">Product</a></li>
-                  <li class="nav-item"><a class="nav-link" routerLink="/printing">Printing Methods</a></li>
-                  <li class="nav-item"><a class="nav-link" routerLink="/faq">FAQ</a></li>
-                  <li class="nav-item"><a class="nav-link" routerLink="/quote">Requst for quote</a></li>
-                  <li class="nav-item last"><a class="nav-link" routerLink="/contact">Contact us</a></li>
+                  <li class="nav-item"><a class="nav-link" routerLink="/product" routerLinkActive="active">Product</a></li>
+                  <li class="nav-item"><a class="nav-link" routerLink="/printing" routerLinkActive="active">Printing Methods</a></li>
+                  <li class="nav-item"><a class="nav-link" routerLink="/faq" routerLinkActive="active">FAQ</a></li>
+                  <li class="nav-item"><a class="nav-link" routerLink="/quote" routerLinkActive="active">Requst for quote</a></li>
+                  <li class="nav-item last"><a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact us</a></li>
                 </ul><!--//nav-->
               </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->
