--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                   <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink='/home'>Home</a></li>
                   <li class="nav-item dropdown" routerLinkActive="active">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" routerLink="/about" >About<i class="fa fa-angle-down"></i></a>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">About<i class="fa fa-angle-down"></i></a>
                     <div class="dropdown-menu dropdown-menu-right">
                       <a class="dropdown-item" routerLink="/about" routerLinkActive="active">About Us</a>
                       <a class="dropdown-item" href="https://www.facebook.com/tjgsingapore/" target="_blank">Portfolio Gallery</a>
