--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,3 +1,37 @@
-<p>
-  faq works!
-</p>
+<body class="about-page">
+    <div class="header-wrapper header-wrapper-faq">
+      <!-- HEADER PARTIALS -->
+      <script type="text/javascript" src="./partials/header.js"></script>
+      <section class="promo section">
+          <div class="container text-center">
+              <h2 class="title">Frequently Asked Questions</h2>
+              <!-- <p class="intro">Below are the questions we got asked most</p> -->
+          </div><!--//container-->
+      </section><!--//promo-->
+    </div><!--//header-wrapper-->
+
+    <section id="team" class="team section">
+            <div class="container">
+              <div id="accordion">
+
+                <div class="card" *ngFor="let question of questions">
+                <div class="card-header" id="heading{{question.id}}">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link title" style="margin:0;height:auto;white-space:normal;" data-toggle="collapse" [attr.data-target]="'#collapse'+question.id" aria-expanded="true" [attr.aria-controls]="'#collapse'+question.id">
+                      {{question.question}}
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapse{{question.id}}" class="collapse" [attr.aria-labelledby]="'heading'+question.id" data-parent="#accordion">
+                  <div class="card-body intro" style="margin:0;text-align:left;max-width:none;white-space:pre-wrap;">
+                    {{question.answer}}
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div><!--//container-->
+          <div class="col-12 text-center">
+            <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank" style="text-center">Browse our portfolio</a>
+          </div>
+        </section><!--//team-section-->
