added call to action

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <body class="about-page">
     <div class="header-wrapper header-wrapper-about">
-      
+
     </div><!--//header-wrapper-->
 
     <!-- ******team Section****** -->
@@ -19,3 +19,5 @@
           <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank" style="text-center">Browse our portfolio</a>
         </div>
     </section><!--//team-section-->
+
+<app-call-to-action></app-call-to-action>
