--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -35,3 +35,5 @@
             <a class="btn btn-cta btn-cta-secondary" href="https://www.facebook.com/tjgsingapore/" target="_blank" style="text-center">Browse our portfolio</a>
           </div>
         </section><!--//team-section-->
+
+        <app-call-to-action></app-call-to-action>
