--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,35 @@
-<p>
-  product works!
-</p>
+<body class="case-study-page">
+
+    <!-- ******Work list Section****** -->
+    <section id="work-list" class="section work-list">
+        <div class="container text-center">
+            <h2 class="title">Products</h2>
+            <div id="filters" class="button-group clearfix">
+                    <button class="btn button is-checked" data-filter="*">All</button>
+                    <button class="btn button" data-filter=".t-shirt">T-Shirt</button>
+                    <button class="btn button" data-filter=".polo">Polo T-Shirt</button>
+                    <button class="btn button" data-filter=".outerwear">Outerwear</button>
+                    <button class="btn button" data-filter=".windbreakers">Windbreakers</button>
+                    <button class="btn button" data-filter=".singlets">Singlets</button>
+                    <button class="btn button" data-filter=".bottoms">Bottoms</button>
+                    <button class="btn button last" data-filter=".accessories">Accessories</button>
+                </div><!--//filters-->
+            <div class="items-wrapper isotope row">
+
+              <!-- T-SHIRT -->
+              <div class="item t-shirt col-lg-4 col-md-6 col-12">
+                  <div class="item-inner">
+                      <figure class="figure">
+                          <a href="product/camo.html"><img class="img-fluid" src="../assets/products/T-Shirt/Camoflage Cotton Round Neck/Camo Tee-opt.jpg" alt="Camoflage Cotton Round Neck" /></a>
+                          <a class="info-mask" href="product/camo.html">
+                            <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
+                              <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
+                              <span class="btn btn-cta btn-cta-primary" >View product</span>
+                          </a><!--//info-mask-->
+                      </figure>
+                      <div class="content text-left">
+                          <h3 class="sub-title"><a href="product/camo.html">Camoflage Cotton Round Neck</a></h3>
+                          <div class="meta">T-Shirt</div>
+                      </div><!--//content-->
+                  </div><!--//item-inner-->
+              </div><!--//item-->
