--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -6,7 +6,6 @@
             <h2 class="title">Products</h2>
             <div id="filters" class="button-group clearfix">
                     <button class="btn button is-checked" data-filter="*">All</button>
-
                     <button class="btn button" data-filter=".t-shirt">T-Shirt</button>
                     <button class="btn button" data-filter=".polo">Polo T-Shirt</button>
                     <button class="btn button" data-filter=".outerwear">Outerwear</button>
@@ -15,13 +14,14 @@
                     <button class="btn button" data-filter=".bottoms">Bottoms</button>
                     <button class="btn button last" data-filter=".accessories">Accessories</button>
                 </div><!--//filters-->
-            <div class="items-wrapper isotope row">
+            <div class="items-wrapper isotope row" *ngFor="let product of products"> 
 
               <!-- T-SHIRT -->
-              <div class="item t-shirt col-lg-4 col-md-6 col-12" *ngFor="let product of products">
+              
+              <div class="item col-lg-4 col-md-6 col-12 {{product.className}}" *ngFor="let subCategory of product.subCategories">
                   <div class="item-inner">
                       <figure class="figure">
-                          <a href="product/camo.html"><img class="img-fluid" src="../assets/products/T-Shirt/Camoflage Cotton Round Neck/Camo Tee-opt.jpg" alt="Camoflage Cotton Round Neck" /></a>
+                          <a href="product/camo.html"><img class="img-fluid" src="{{subCategory.imageLink}}" alt="Camoflage Cotton Round Neck" /></a>
                           <a class="info-mask" href="product/camo.html">
                             <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
                               <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
@@ -29,14 +29,12 @@
                           </a><!--//info-mask-->
                       </figure>
                       <div class="content text-left">
-                          <h3 class="sub-title"><a href="product/camo.html">{{product.categoryName}}</a></h3>
+                          <h3 class="sub-title"><a href="product/camo.html">{{subCategory.subCatName}}</a></h3>
                           <div class="meta">{{product.categoryName}}</div>
-                          <pre>{{product.subCategories[0].subCatName}}</pre>
-                          <li *ngFor="let subCategories of product.subCategories">
-                              {{subCategories.subCatName}}
-                          </li>
                       </div><!--//content-->
                   </div><!--//item-inner-->
               </div><!--//item-->
 
-              <pre> </pre>
+            </div><!--//items-wrapper-->
+        </div><!--//container-fluid-->
+    </section><!--//work-list"-->
