layout product page and favicon

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,23 @@
-<p>
-  blog works!
-</p>
+<body class="blog-home-page">
+  <div class="header-wrapper header-wrapper-blog-home">
+    <!-- HEADER PARTIALS -->
+    <script type="text/javascript" src="./partials/header.js"></script>
+      <section class="promo section">
+          <div class="container text-center">
+              <h2 class="title">Blog</h2>
+              <p class="intro">Stay tuned for updates</p>
+          </div><!--//container-->
+      </section><!--//promo-->
+  </div><!--//header-wrapper-->
+  
+  <section id="blog-list" class="blog-list section">
+    <div class="container">
+        <article class="item">
+            <div class="row">
+                <h3 class="post-title col-lg-10 col-md-9 col-12 ml-md-auto "><a href="blog-post.html">No Updates</a></h3>
+            </div>
+        </article>
+    </div>
+</section>
+
+<app-call-to-action></app-call-to-action>
