--- a/src/app/printing-methods/printing-methods.component.html
+++ b/src/app/printing-methods/printing-methods.component.html
@@ -1,3 +1,68 @@
-<p>
-  printing-methods works!
-</p>
+<body class="caset-study-page">
+  <div class="header-wrapper header-wrapper-work">
+    <!-- HEADER PARTIALS -->
+    <script type="text/javascript" src="./partials/header.js"></script>
+      <section class="promo section">
+          <div class="container text-center">
+              <h2 class="title">Our Work</h2>
+              <p class="intro">Our approach to lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in leo turpis. Ut ex neque, cursus vulputate facilisis sed, tempor quis ligula.</p>
+          </div><!--//container-->
+      </section><!--//promo-->
+  </div><!--//header-wrapper-->
+
+  <!-- ******Services Section****** -->
+  <section id="services" class="services section">
+      <div class="container text-center">
+          <h2 class="title">Services</h2>
+          <p class="intro">We offer lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+          <div class="service-items row">
+              <div class="item col-xl-3 col-md-6 col-12">
+                  <div class="item-inner">
+                      <div class="header-box">
+                          <span class="fs1" aria-hidden="true" data-icon="&#xe104;"></span>
+                      </div><!--//header-->
+                      <div class="desc">
+                          <h3 class="sub-title">UX &amp; Front-end</h3>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vitae diam magna. Curabitur nibh metus, ultricies sed aliquam euismod, scelerisque eu purus. In hac habitasse platea dictumst. Suspendisse tempus elit eget libero suscipit pulvinar.</p>
+                      </div>
+                  </div><!--//item-inner-->
+              </div><!--//item-->
+              <div class="item col-xl-3 col-md-6 col-12">
+                  <div class="item-inner">
+                      <div class="header-box">
+                          <span class="fs1" aria-hidden="true" data-icon="&#xe0ea;"></span>
+                      </div><!--//header-->
+                      <div class="desc">
+                          <h3 class="sub-title">Back-end &amp; Database</h3>
+                          <p>Phasellus fermentum accumsan fermentum. Vestibulum elit sapien, consequat vitae auctor sit amet, elementum sed elit. Quisque ullamcorper quis augue sit amet porttitor. Maecenas ac dolor iaculis, dapibus.</p>
+                      </div>
+                  </div><!--//item-inner-->
+              </div><!--//item-->
+              <div class="item col-xl-3 col-md-6 col-12">
+                  <div class="item-inner">
+                      <div class="header-box">
+                          <span class="fs1" aria-hidden="true" data-icon="&#xe003;"></span>
+                      </div><!--//header-->
+                      <div class="desc">
+                          <h3 class="sub-title">Hosting</h3>
+                          <p>Cras mollis ex sed tortor finibus, a mattis risus rhoncus. Sed sodales et metus at sodales. Ut non dolor sollicitudin, venenatis mauris eget, fringilla enim. Pellentesque sed magna ante. Cras mollis tincidunt lectus vitae suscipit.</p>
+                      </div>
+                  </div><!--//item-inner-->
+              </div><!--//item-->
+              <div class="item col-xl-3 col-md-6 col-12">
+                  <div class="item-inner">
+                      <div class="header-box">
+                          <span class="fs1" aria-hidden="true" data-icon="&#xe028;"></span>
+                      </div><!--//header-->
+                      <div class="desc">
+                          <h3 class="sub-title">Support</h3>
+                          <p>Aliquam efficitur, lorem blandit dapibus viverra, erat turpis placerat lacus, quis hendrerit libero sem eget dui. Integer eu diam orci. Nullam sed dictum lorem. Quisque ut lacus non enim aliquam pretium sit amet id augue.</p>
+                      </div>
+                  </div><!--//item-inner-->
+              </div><!--//item-->
+          </div><!--//row-->
+          <a class="btn btn-cta btn-cta-primary" href="contact.html">Get a quote</a>
+      </div><!--//container-->
+  </section>
+
+  <app-call-to-action></app-call-to-action>
