paramMap routing OK

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -18,6 +18,8 @@
           <a href="product/camo.html">{{subCategory.subCatName}}</a>
         </h3>
         <div class="meta">{{product.categoryName}}</div>
+        <pre>{{productCategoryName}}</pre>
+
       </div>
       <!--//content-->
     </div>
