--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,45 +1,79 @@
 <!-- ******HEADER****** -->
-      <header id="header" class="header fixed-top">
-          <div class="row">
-            <div class="col-6 offset-3">
-              <h1 class="logo text-center">
-                <a href="index.html"><img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage" height="40px;" style="margin-top: 10px;"></a>
-                  <!-- <span class="highlight">The</span>JerrardGarage</a> -->
-              </h1><!--//logo-->
-            </div>
+<header id="header" class="header fixed-top">
+  <div class="row">
+    <div class="col-6 offset-3">
+      <h1 class="logo text-center">
+        <a href="index.html">
+          <img src="../../assets/logos/TJG logo.svg" alt="The Jerrard Garage" height="40px;" style="margin-top: 10px;">
+        </a>
+        <!-- <span class="highlight">The</span>JerrardGarage</a> -->
+      </h1>
+      <!--//logo-->
+    </div>
 
-            <div class="col-3 text-center" style="margin-top:8px;">
-              <a target="_blank" title="find us on Facebook" href="https://www.facebook.com/tjgsingapore/"><img alt="follow me on facebook" src="https://en.facebookbrand.com/wp-content/uploads/2016/05/flogo_rgb_hex-brc-site-250.png" width="30" border=0 style="margin-right:5px"></a>
+    <div class="col-3 text-center" style="margin-top:8px;">
+      <a target="_blank" title="find us on Facebook" href="https://www.facebook.com/tjgsingapore/">
+        <img alt="follow me on facebook" src="https://en.facebookbrand.com/wp-content/uploads/2016/05/flogo_rgb_hex-brc-site-250.png"
+          width="30" border=0 style="margin-right:5px">
+      </a>
 
-              <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/tjg.sg"><img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
-            </div>
+      <a target="_blank" title="follow me on instagram" href="https://www.instagram.com/tjg.sg">
+        <img alt="follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0>
+      </a>
+    </div>
 
-          <div class="col-12 text-center">
-            <nav class="main-nav navbar navbar-expand-md navbar-dark" role="navigation">
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div id="navbar-collapse" class="navbar-collapse collapse justify-content-center">
-                <ul class="nav navbar-nav">
-                  <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink='/home'>Home</a></li>
-                  <li class="nav-item dropdown" routerLinkActive="active">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">About<i class="fa fa-angle-down"></i></a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                      <a class="dropdown-item" routerLink="/about" routerLinkActive="active">About Us</a>
-                      <a class="dropdown-item" href="https://www.facebook.com/tjgsingapore/" target="_blank">Portfolio Gallery</a>
-                      <a class="dropdown-item" routerLink="/blog" routerLinkActive="active">Blog (Under Construction)</a>
-                      <!-- <a class="dropdown-item" routerLink="/blog-post">Single Blog Post</a>
+    <div class="col-12 text-center">
+      <nav class="main-nav navbar navbar-expand-md navbar-dark" role="navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbar-collapse" class="navbar-collapse collapse justify-content-center">
+          <ul class="nav navbar-nav">
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" routerLink='/home'>Home</a>
+            </li>
+            <li class="nav-item dropdown" routerLinkActive="active">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">About
+                <i class="fa fa-angle-down"></i>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right">
+                <a class="dropdown-item" routerLink="/about" routerLinkActive="active">About Us</a>
+                <a class="dropdown-item" href="https://www.facebook.com/tjgsingapore/" target="_blank">Portfolio Gallery</a>
+                <a class="dropdown-item" routerLink="/blog" routerLinkActive="active">Blog (Under Construction)</a>
+                <!-- <a class="dropdown-item" routerLink="/blog-post">Single Blog Post</a>
                       <a class="dropdown-item" routerLink="/404">404 Page</a> -->
-                    </div>
-                  </li><!--//dropdown-->
-                  <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/products" >Product</a></li>
-                  <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/printing-methods" >Printing Methods</a></li>
-                  <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/faq" >FAQ</a></li>
-                  <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="/quote" >Requst for quote</a></li>
-                  <li class="nav-item last" routerLinkActive="active"><a class="nav-link" routerLink="/contact-us" >Contact us</a></li>
-                </ul><!--//nav-->
-              </div><!--//navabr-collapse-->
-            </nav><!--//main-nav-->
-          </div>
-        </div><!--//container-->
-      </header><!--//header-->
+              </div>
+            </li>
+            <!--//dropdown-->
+            <li class="nav-item dropdown" routerLinkActive="active">
+              <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" routerLink="/products">Product
+                <i class="fa fa-angle-down"></i>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right">
+                <a class="dropdown-item" routerLinkActive="active" *ngFor="let product of products" (click)=onSelect(product) >{{product.categoryName}}</a>
+              </div>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" routerLink="/printing-methods">Printing Methods</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" routerLink="/faq">FAQ</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" routerLink="/quote">Requst for quote</a>
+            </li>
+            <li class="nav-item last" routerLinkActive="active">
+              <a class="nav-link" routerLink="/contact-us">Contact us</a>
+            </li>
+          </ul>
+          <!--//nav-->
+        </div>
+        <!--//navabr-collapse-->
+      </nav>
+      <!--//main-nav-->
+    </div>
+  </div>
+  <!--//container-->
+</header>
+<!--//header-->
