--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -4,10 +4,10 @@
   <div class="item col-lg-4 col-md-6 col-12 {{product.className}}" *ngFor="let subCategory of product.subCategories" >
     <div class="item-inner">
       <figure class="figure" >
-        <a href="product/camo.html">
+        <a href="products/camo.html">
           <img class="img-fluid" src="{{subCategory.imageLink}}" alt="{{subCategory.subCatName}}" />
         </a>
-        <a class="info-mask" href="product/camo.html">
+        <a class="info-mask" href="products/camo.html">
           <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
           <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
           <span class="btn btn-cta btn-cta-primary">View product</span>
@@ -16,7 +16,7 @@
       </figure>
       <div class="content text-left">
         <h3 class="sub-title">
-          <a href="product/camo.html">{{subCategory.subCatName}}</a>
+          <a href="products/camo.html">{{subCategory.subCatName}}</a>
         </h3>
         <div class="meta">{{product.categoryName}}</div>
       </div>
@@ -32,10 +32,10 @@
     <div class="item col-lg-4 col-md-6 col-12 {{product.className}}" *ngFor="let subCategory of product.subCategories" >
       <div class="item-inner">
         <figure class="figure" >
-          <a href="product/camo.html">
+          <a href="products/camo.html">
             <img class="img-fluid" src="{{subCategory.imageLink}}" alt="{{subCategory.subCatName}}" />
           </a>
-          <a class="info-mask" href="product/camo.html">
+          <a class="info-mask" href="products/camo.html">
             <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
             <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
             <span class="btn btn-cta btn-cta-primary">View product</span>
@@ -44,7 +44,7 @@
         </figure>
         <div class="content text-left">
           <h3 class="sub-title">
-            <a href="product/camo.html">{{subCategory.subCatName}}</a>
+            <a href="products/camo.html">{{subCategory.subCatName}}</a>
           </h3>
           <div class="meta">{{product.categoryName}}</div>
         </div>
@@ -55,8 +55,6 @@
     <!--//item-->
   </div>
   <!--//items-wrapper-->
-
-
 
 </div>
 
