--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -20,8 +20,8 @@
       <div id="filters" class="button-group clearfix">
         <!-- <button class="btn button" data-filter="*" (click)="selectAll()" [class.is-checked]="products === [] || selectedCategory === products">All</button>
         <button class="btn button" data-filter=".t-shirt"  *ngFor="let product of products" (click)="onSelect(product)" [class.is-checked]="selectedCategory === product.categoryName">{{product.categoryName}}</button> -->
-        <li class="btn button dropdown" *ngFor="let product of products">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">{{product.categoryName}}
+        <li class="btn button dropdown" [class.is-checked]="productCategoryName === product.categoryName" *ngFor="let product of products">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" (click)=onSelect(product) >{{product.categoryName}}
             <i class="fa fa-angle-down"></i>
           </a>
           <div class="dropdown-menu dropdown-menu-right">
