--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -5,10 +5,10 @@
       <div class="item col-lg-4 col-md-6 col-12" *ngFor="let subCategory of product.subCategories">
         <div class="item-inner">
           <figure class="figure">
-            <a href="products/camo.html">
+            <a (click)="onSelectSubCat(subCategory)">
               <img class="img-fluid" src="{{subCategory.imageLink}}" alt="{{subCategory.subCatName}}" />
             </a>
-            <a class="info-mask" href="products/camo.html">
+            <a class="info-mask" (click)="onSelectSubCat(subCategory)">
               <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
               <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
               <span class="btn btn-cta btn-cta-primary">View product</span>
@@ -17,7 +17,7 @@
           </figure>
           <div class="content text-left">
             <h3 class="sub-title">
-              <a href="products/camo.html">{{subCategory.subCatName}}</a>
+              <a (click)="onSelectSubCat(subCategory)">{{subCategory.subCatName}}</a>
             </h3>
             <div class="meta">{{product.categoryName}}</div>
           </div>
@@ -33,10 +33,10 @@
       <div class="item col-lg-4 col-md-6 col-12" *ngFor="let subCategory of product.subCategories">
         <div class="item-inner">
           <figure class="figure">
-            <a href="products/camo.html">
+            <a (click)="onSelectSubCat(subCategory)">
               <img class="img-fluid" src="{{subCategory.imageLink}}" alt="{{subCategory.subCatName}}" />
             </a>
-            <a class="info-mask" href="products/camo.html">
+            <a class="info-mask" (click)="onSelectSubCat(subCategory)">
               <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
               <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
               <span class="btn btn-cta btn-cta-primary">View product</span>
@@ -45,7 +45,7 @@
           </figure>
           <div class="content text-left">
             <h3 class="sub-title">
-              <a href="products/camo.html">{{subCategory.subCatName}}</a>
+              <a (click)="onSelectSubCat(subCategory)">{{subCategory.subCatName}}</a>
             </h3>
             <div class="meta">{{product.categoryName}}</div>
           </div>
@@ -57,15 +57,14 @@
     </div>
     <!--//items-wrapper-->
 
-
     <div class="items-wrapper isotope row" fxLayout="row" *ngIf="subCategory.subCatName === selectedCategory">
       <div class="item col-lg-4 col-md-6 col-12" *ngFor="let item of subCategory.items">
         <div class="item-inner" >
           <figure class="figure">
-            <a href="products/camo.html">
+            <a (click)="onSelectItem(item)">
               <img class="img-fluid" src="{{item.imageLink}}" alt="{{item.itemName}}" />
             </a>
-            <a class="info-mask" href="products/camo.html">
+            <a class="info-mask" (click)="onSelectItem(item)">
               <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
               <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
               <span class="btn btn-cta btn-cta-primary">View product</span>
@@ -74,7 +73,7 @@
           </figure>
           <div class="content text-left">
             <h3 class="sub-title">
-              <a href="products/camo.html">{{item.itemName}}</a>
+              <a (click)="onSelectItem(item)">{{item.itemName}}</a>
             </h3>
             <div class="meta">{{subCategory.subCatName}}</div>
           </div>
