--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,4 @@
 <div *ngFor="let product of products">
-  <div *ngFor="let subCategory of product.subCategories">
 
     <div class="items-wrapper isotope row" fxLayout="row" *ngIf="!selectedCategory">
       <div class="item col-lg-4 col-md-6 col-12" *ngFor="let subCategory of product.subCategories">
@@ -9,7 +8,6 @@
               <img class="img-fluid" src="{{subCategory.imageLink}}" alt="{{subCategory.subCatName}}" />
             </a>
             <a class="info-mask" (click)="onSelectSubCat(subCategory)">
-              <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
               <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
               <span class="btn btn-cta btn-cta-primary">View product</span>
             </a>
@@ -37,7 +35,6 @@
               <img class="img-fluid" src="{{subCategory.imageLink}}" alt="{{subCategory.subCatName}}" />
             </a>
             <a class="info-mask" (click)="onSelectSubCat(subCategory)">
-              <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
               <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
               <span class="btn btn-cta btn-cta-primary">View product</span>
             </a>
@@ -57,7 +54,9 @@
     </div>
     <!--//items-wrapper-->
 
+    <div *ngFor="let subCategory of product.subCategories">
     <div class="items-wrapper isotope row" fxLayout="row" *ngIf="subCategory.subCatName === selectedCategory">
+
       <div class="item col-lg-4 col-md-6 col-12" *ngFor="let item of subCategory.items">
         <div class="item-inner" >
           <figure class="figure">
@@ -65,8 +64,7 @@
               <img class="img-fluid" src="{{item.imageLink}}" alt="{{item.itemName}}" />
             </a>
             <a class="info-mask" (click)="onSelectItem(item)">
-              <!-- <img class="img-fluid" src="assets/images/products/T-Shirt/Cotton Long Sleeve/Comfy Soft Cotton Long Sleeve/Logn Sleeve Cotton.png"></img> -->
-              <span class="desc">Project intro goes here lorem ipsum dolor sit amet, consectetuer adipiscing elit...</span>
+              <span class="desc">{{item.description | slice:0:200}}</span>
               <span class="btn btn-cta btn-cta-primary">View product</span>
             </a>
             <!--//info-mask-->
@@ -83,7 +81,8 @@
       </div>
       <!--//item-->
     </div>
+
+    </div>
     <!--//items-wrapper-->
     <!--//items-wrapper-->
-  </div>
 </div>
